2010-10-21  Helmut Eller  <heller@common-lisp.net>

	In ABCL, try harder to find the source of stack frames.

	* swank-abcl.lisp (source-location): Now a GF.
	(source-location [java-stack-frame]): New.
	(source-location [lisp-stack-frame]): New.
	(source-location [function]): New.
	(frame-source-location, find-definitions): Use them.
	(*source-path*, find-definitions): New.
	(system-property, pathname-parent, pathname-absolute-p)
	(split-string, path-separator, search-path-property)
	(jdk-source-path, class-path, zipfile-contains-p)
	(find-file-in-path): Noise for filename frobbing.

2010-10-21  Helmut Eller  <heller@common-lisp.net>

	Require ABCL 0.22 and remove obsolete conditionalisation.

	* swank-abcl.lisp (call-with-debugger-hook)
	(install-debugger-globally)
	(call-with-debugging-environment, backtrace, print-frame, spawn):
	Remove #+/#- stuff.
	(preferred-communication-style): Return :spawn unconditionally.
	(sys::break): Removed.

2010-10-20  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-connect): Convert the port number read from
	minibuffer to an integer, passing it as a string to
	`make-network-process' isn't portable.
	Patch by Marko Kocic.

2010-10-19  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (invoke-nth-restart): Make sure there is such restart
	before invoking it.

2010-10-19  Stas Boukarev  <stassats@gmail.com>

	* swank-sbcl.lisp (deinit-log-output): Use the right symbol for
	*LOG-OUTPUT*, swank package isn't available at the time
	swank-backend is compiled.

2010-10-16  Stas Boukarev  <stassats@gmail.com>

	* swank-loader.lisp (default-fasl-dir): Guard against using :asdf
	package if it doesn't exist.
	Patch by Anton Vodonosov.

2010-10-16  Attila Lendvai  <attila.lendvai@gmail.com>

	* swank-fuzzy.lisp: speed up by 2-4 times (on sbcl).

	* fuzzy.el: Clean up fuzzy completion's keymap code, drop
	mimic-key-bindings.

	* slime.el: Added separate host and port history for
	slime-connect.